sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:20: error: not found: value i
      setValue(i,v)
               ^